examples/python/failing/mismatched_argument_lists/Base.py
from bookmaker import front_page, compile

def main():
    compile()

